# ruchy-docker

./: .cargo-mutants.toml  .gitignore  .pmat-gates.toml  BENCHMARKING.md  CLAUDE.md  Cargo.toml  DEMO_QUICKSTART.md  Makefile  README.md  demo.sh  rust-toolchain.toml
.github/workflows/: audit.yml  ci.yml
benchmarks/fibonacci/: main.c  main.go  main.jl  main.py  main.rs  main.ruchy  main.ts
benchmarks/matrix-multiply/: main.c  main.go  main.jl  main.py  main.rs  main.ruchy  main.ts
benchmarks/primes/: main.c  main.go  main.jl  main.py  main.rs  main.ruchy  main.ts
docker/c/: fibonacci.Dockerfile  matrix-multiply.Dockerfile  primes.Dockerfile
docker/deno/: fibonacci.Dockerfile  matrix-multiply.Dockerfile  primes.Dockerfile
docker/go/: fibonacci.Dockerfile  matrix-multiply.Dockerfile  primes.Dockerfile
docker/julia/: fibonacci.Dockerfile  matrix-multiply.Dockerfile  primes.Dockerfile
docker/python/: fibonacci.Dockerfile  matrix-multiply.Dockerfile  primes.Dockerfile
docker/ruchy-compiled/: fibonacci.Dockerfile  matrix-multiply.Dockerfile  primes.Dockerfile
docker/ruchy-transpiled/: fibonacci.Dockerfile  matrix-multiply.Dockerfile  primes.Dockerfile
docs/: PROFILING_ANALYSIS.md  runtime.md
scripts/: README.md  build-all-images.sh  chart-generator.ts  generate-ascii-charts.ts  score-dockerfiles.sh  test_build_all_images.sh  update-readme-charts.ts
src/: analyzer.rs  lib.rs  main.rs  metrics.rs  reporter.rs  runner.rs
tests/: analyzer_tests.rs  integration_tests.rs  metrics_edge_cases.rs  reporter_tests.rs  runner_tests.rs  unit_tests.rs
(+12 files in other folders)
