[package]
name = "ruchy-docker"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Pragmatic AI Labs"]
description = "Scientifically rigorous Docker runtime benchmarking framework"
license = "MIT"
repository = "https://github.com/paiml/ruchy-docker"

[dependencies]
# Docker orchestration
bollard = "0.17"
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and logging
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Statistics
statrs = "0.17"

# Regex for parsing
regex = "1.10"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
# Testing frameworks
proptest = "1.4"
criterion = "0.5"
mockall = "0.12"

# Test fixtures
tempfile = "3.8"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1

[[bin]]
name = "ruchy-docker"
path = "src/main.rs"

[lib]
name = "ruchy_docker"
path = "src/lib.rs"
